--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
 			<li class="nav-item"><a class="nav-link" routerLink="/home">Home</a></li>
 			<li class="nav-item"><a class="nav-link" *ngIf="user && user.role !== 'specialist' && isValid" routerLink="/new-appointment">New Appointment</a></li>
 			<li class="nav-item"><a class="nav-link" *ngIf="isValid" routerLink="/appointments">Appointments</a></li>
-			<li class="nav-item"><a class="nav-link" *ngIf="user && user.role === 'admin'" routerLink="/users">Users</a></li>
+			<li class="nav-item"><a class="nav-link" *ngIf="user && user.role === 'admin' && isEmailVerif" routerLink="/users">Users</a></li>
 			<li class="nav-item"><a class="nav-link" *ngIf="isValid" routerLink="/account">Account</a></li>
 			<li class="nav-item"><a class="nav-link" *ngIf="user && user.role === 'specialist' && !isValid" routerLink="/specialist-enabling">Enable</a></li>
 			<li class="nav-item"><a class="nav-link" *ngIf="user && !isEmailVerif" routerLink="/account-verification">Verify</a></li>
