--- a/src/app/components/user-list/user-list.component.html
+++ b/src/app/components/user-list/user-list.component.html
@@ -59,5 +59,5 @@
 		</span>
 	</div>
 
-	<app-new-account-template (createdUser)="newAccount($event)"></app-new-account-template>
+	<app-new-account-template [admin]="true" (createdUser)="newAccount($event)"></app-new-account-template>
 </div>
