--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -2,14 +2,9 @@
 	<form [formGroup]="loginForm" class="form-signin bg-light bg-opacity-50 rounded" (ngSubmit)="signIn()">
 		<h1 class="h3 mb-3 font-weight-normal">Member Login</h1>
 
-		<div class="quick-access row d-flex align-items-center" *ngIf="quickAccessUsers.length > 0">
-			<div *ngFor="let qUser of quickAccessUsers" class="col-md-2 image-div d-flex flex-column align-items-center">
-				<img [src]="qUser.imgUrl1" [alt]="qUser.firstName + '_' + qUser.lastName" [id]="qUser.idNo" class="rounded-2"
-					role="button" (click)="quickFill(qUser)">
-			</div>
-			<div class="col-md-6 text-muted border-end">PATIENTS</div>
-			<div class="col-md-4 text-muted border-end">SPECIALISTS</div>
-			<div class="col-md-2 text-muted">ADMIN</div>
+		<div class="quick-access mb-2" *ngIf="users.length > 0">
+			<app-user-btn-list [userList]="users" (btnPressed)="quickFill($event)" [config]="usrBtnListConfig">
+			</app-user-btn-list>
 		</div>
 
 		<input type="email" id="inputEmail" class="form-control" placeholder="Email address" formControlName="email"
