--- a/src/app/components/appointments/new-appointment/new-appointment.component.html
+++ b/src/app/components/appointments/new-appointment/new-appointment.component.html
@@ -13,62 +13,54 @@
 					</button>
 				</div>
 
-				<div class="mb-2" *ngIf="availableSpecialists.length > 0">
-					<app-user-btn-list [userList]="availableSpecialists" (btnPressed)="selectSpecialist($event)"
-						[config]="specBtnListConfig"></app-user-btn-list>
+				<div *ngIf="specialist; else docList">
+					<p class="fs-3 fst-italic text-decoration-underline" role="button" (click)="selectSpecialist(null)">
+						Dr. {{specialist.firstName}} {{specialist.lastName}}
+					</p>
 				</div>
+				<ng-template #docList>
+					<div class="mb-2" *ngIf="specialists.length > 0">
+						<app-user-btn-list [userList]="specialists" (btnPressed)="selectSpecialist($event)"
+							[config]="specBtnListConfig"></app-user-btn-list>
+					</div>
+				</ng-template>
 
-				<div *ngIf="patient" class="row">
-					<div class="col">
-						<label for="specialty">Specialty</label>
-						<div class="input-group">
-							<select class="form-control text-center" id="specialty" [(ngModel)]="specialty" name="specialty"
-								(change)="selectSpecialty()">
-								<option [ngValue]="null" disabled selected>Select a specialty</option>
-								<option *ngFor="let spec of specialtyArray" [ngValue]="spec">{{spec.value}}</option>
-							</select>
-							<div class="input-group-prepend">
-								<span class="input-group-text rounded-start-0">
-									<i class="bi bi-box-arrow-down"></i>
-								</span>
-							</div>
+				<div *ngIf="specialty; else specsList">
+					<p class="fs-4 fst-italic text-decoration-underline" role="button" (click)="selectSpecialty(null)">
+						{{specialty.value}}
+					</p>
+				</div>
+				<ng-template #specsList>
+					<div class="mb-2 row d-flex align-items-center justify-content-center"
+						*ngIf="availableSpecialties.length > 0">
+						<div *ngFor="let spec of availableSpecialties; index as i"
+							class="col-auto image-div d-flex flex-column align-items-center">
+							<img [src]="spec.imgUrl" [alt]="spec+'_'+i" [id]="spec.id" role="button" class="rounded-2"
+								(click)="selectSpecialty(spec)">
 						</div>
 					</div>
-					<!-- <div class="col-md-6">
-						<label for="specialist">Specialist</label>
-						<div class="input-group">
-							<select class="form-control text-center" id="specialist" [(ngModel)]="specialist" name="specialist"
-								(change)="selectSpecialist()">
-								<option [ngValue]="null" disabled selected>Select a specialist</option>
-								<option *ngFor="let spec of availableSpecialists" [ngValue]="spec">
-									{{spec.firstName}} {{spec.lastName}}
-								</option>
-							</select>
-							<div class="input-group-prepend">
-								<span class="input-group-text rounded-start-0">
-									<i class="bi bi-box-arrow-down"></i>
-								</span>
-							</div>
-						</div>
-					</div> -->
-				</div>
-
+				</ng-template>
 
 				<hr class="mb-4">
-				<div *ngIf="specialist">
-					<div class="row" *ngFor="let dateGroup of groupedDates">
-						<div class="col-md-5 text-primary fs-5">
-							<p>{{ dateGroup[0] }}</p>
+
+				<div *ngIf="!dateChosen; else hoursList">
+					<div class="mb-2 row d-flex align-items-center justify-content-center" *ngIf="groupedDates.length > 0">
+						<div *ngFor="let date of groupedDates" class="col-auto d-flex flex-column align-items-center pb-2">
+							<button class="btn btn-outline-primary " (click)="selectDate(date)">{{date[0]}}</button>
 						</div>
-						<div class="col-md-7 btn-group flex-wrap">
-							<button class="btn btn-light border-primary rounded me-1 mb-1" *ngFor="let date of dateGroup[1]"
-								type="submit" (click)="selectDate(date)">
-								{{ date | date: 'HH:mm' }}
-							</button>
-						</div>
-						<hr class="my-2">
 					</div>
 				</div>
+				<ng-template #hoursList>
+					<p class="fs-4 fst-italic text-decoration-underline" role="button" (click)="selectDate(null)">
+						{{dateChosen | date: 'YYYY/MM/dd'}}
+					</p>
+					<div class="mb-2 row d-flex align-items-center justify-content-center" *ngIf="selectedDayAvHours.length > 0">
+						<div *ngFor="let hour of selectedDayAvHours" class="col-auto d-flex flex-column align-items-center pb-2">
+							<button class="btn btn-outline-primary" (click)="selectTime(hour)">{{hour | date: 'HH:mm'}}</button>
+						</div>
+					</div>
+				</ng-template>
+
 			</form>
 		</div>
 	</div>
