--- a/src/app/components/user-list/user-list.component.html
+++ b/src/app/components/user-list/user-list.component.html
@@ -34,7 +34,7 @@
 				</td>
 				<td class="col-md-1 text-center">
 					<div class="ms-3">
-						<button class="btn btn-primary fw-normal mb-0" *ngIf="user.role === 'patient'"
+						<button class="btn btn-outline-primary fw-normal mb-0" *ngIf="user.role === 'patient'"
 							(click)="showMedicalHistory(parsePatient(user))">
 							History
 						</button>
