--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,5 +19,6 @@
 	</div>
 </nav>
 <!-- end header section -->
-
-<router-outlet></router-outlet>
+<main [@routeAnimations]="prepareRoute(outlet)">
+	<router-outlet #outlet="outlet"></router-outlet>
+</main>
