--- a/src/app/components/appointments/list-appointment/list-appointment.component.html
+++ b/src/app/components/appointments/list-appointment/list-appointment.component.html
@@ -1,42 +1,10 @@
 <h2 class="text-center mt-5">Appointments</h2>
-<div class="filters">
-	<div class="d-flex justify-content-center">
-		<div class="row">
-			<div class="col">
-				<div class="form-check form-check-inline" *ngFor="let spec of SpecialtyArray">
-					<input class="form-check-input" type="radio" name="specialtyFilter" [id]="spec.id" [value]="spec"
-						[(ngModel)]="specialtyRadio" (click)="specialtyRadioChange(spec)">
-					<label class="form-check-label" [for]="spec.id">{{spec.value}}</label>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="d-flex justify-content-center" *ngIf="user.role !== 'specialist'">
-		<div class="row">
-			<div class="col">
-				<div class="form-check form-check-inline" *ngFor="let spec of SpecialistArray">
-					<input class="form-check-input" type="radio" name="specialistFilter" [id]="spec.id" [value]="spec"
-						[(ngModel)]="specialistRadio" (click)="specialistRadioChange(spec)">
-					<label class="form-check-label" [for]="spec.id">{{spec.lastName}}</label>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="d-flex justify-content-center" *ngIf="user.role === 'specialist'">
-		<div class="row">
-			<div class="col">
-				<div class="form-check form-check-inline" *ngFor="let pat of PatientArray">
-					<input class="form-check-input" type="radio" name="patientFilter" [id]="pat.id" [value]="pat"
-						[(ngModel)]="patientRadio" (click)="patientRadioChange(pat)">
-					<label class="form-check-label" [for]="pat.id">{{pat.lastName}}</label>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="d-flex justify-content-center">
-		<span class="nav-link active text-decoration-underline" (click)="resetFilter()" role="button">
-			Reset filters
-		</span>
+
+<div class="d-flex justify-content-center">
+	<div class="input-group mb-3 w-25">
+		<span class="input-group-text"><i class="bi bi-funnel"></i></span>
+		<input type="search" [(ngModel)]="filterInput" class="form-control" (input)="filterTable()"
+			placeholder="Start typing to filter..." autocomplete="off">
 	</div>
 </div>
 
@@ -83,14 +51,16 @@
 				</td>
 				<td class="col-md-auto">
 					<ul class="nav list-group-inline justify-content-center">
-						<li *ngIf="(user.role === 'patient' && appt.status === 'pending') || (user.role !== 'patient' && appt.status === 'accepted')" class="nav-item">
+						<li
+							*ngIf="(user.role === 'patient' && appt.status === 'pending') || (user.role !== 'patient' && appt.status === 'accepted')"
+							class="nav-item">
 							<button class="nav-link active text-decoration-underline px-1"
 								(click)="changeApptStatus(appt, 'cancelled')">
 								Cancel
 							</button>
 						</li>
 						<li *ngIf="appt.status !== 'pending' && appt.status !== 'accepted' &&
-									((user.role === 'specialist' && appt.patReview) || (user.role === 'patient' && appt.specReview))"
+									((user.role === 'specialist' && appt.patReview) || (user.role !== 'specialist' && appt.specReview))"
 							class="nav-item">
 							<button class="nav-link active text-decoration-underline px-1" (click)="showReview(appt)">
 								See Review
