--- a/src/app/components/appointments/appt-diagnosis/appt-diagnosis.component.html
+++ b/src/app/components/appointments/appt-diagnosis/appt-diagnosis.component.html
@@ -36,7 +36,7 @@
 					<input type="number" class="form-control" formControlName="diastolic" min="10" max="130"
 						placeholder="Diastolic"
 						[class]="diagnosisForm.controls['diastolic'].errors !== null && diagnosisForm.controls['diastolic'].touched ? 'border-danger border-2' : ''" />
-					<div class="input-group-append">
+					<div class="input-group-append rounded-start-0">
 						<span class="input-group-text">mmHg</span>
 					</div>
 				</div>
@@ -47,34 +47,28 @@
 		<div class="row">
 			<div class="col-md-4">
 				<div class="input-group" formGroupName="additional1">
-					<div class="input-group-preppend">
-						<input type="text" class="input-group-text rounded-end-0" formControlName="key" placeholder="Key">
-					</div>
-					<input type="number" class="form-control" formControlName="value" placeholder="Value">
+					<input type="text" class="input-group-text rounded-end-0 w-70" formControlName="key" placeholder="Key">
+					<input type="number" class="form-control rounded-start-0 w-30" formControlName="value" placeholder="Value">
 				</div>
 			</div>
 			<div class="col-md-4">
 				<div class="input-group" formGroupName="additional2">
-					<div class="input-group-preppend">
-						<input type="text" class="input-group-text rounded-end-0" formControlName="key" placeholder="Key">
-					</div>
-					<input type="number" class="form-control" formControlName="value" placeholder="Value">
+					<input type="text" class="input-group-text rounded-end-0 w-70" formControlName="key" placeholder="Key">
+					<input type="number" class="form-control rounded-start-0 w-30" formControlName="value" placeholder="Value">
 				</div>
 			</div>
 			<div class="col-md-4">
 				<div class="input-group" formGroupName="additional3">
-					<div class="input-group-preppend">
-						<input type="text" class="input-group-text rounded-end-0" formControlName="key" placeholder="Key">
-					</div>
-					<input type="number" class="form-control" formControlName="value" placeholder="Value">
+					<input type="text" class="input-group-text rounded-end-0 w-70" formControlName="key" placeholder="Key">
+					<input type="number" class="form-control rounded-start-0 w-30" formControlName="value" placeholder="Value">
 				</div>
 			</div>
 		</div>
 
 		<div class="d-flex justify-content-center mt-3">
-			<button mat-dialog-actions class="btn btn-primary btn-lg btn-block px-2" type="submit"
+			<button mat-dialog-actions class="btn btn-outline-primary btn-md btn-block px-2 mx-1" type="submit"
 				[disabled]="diagnosisForm.invalid" (click)="submitDiagnosis()">Submit</button>
-			<button mat-dialog-actions class="btn btn-outline-primary btn-lg btn-block px-2"
+			<button mat-dialog-actions class="btn btn-outline-danger btn-md btn-block px-2 mx-1"
 				(click)="dialogRef.close(null)">Cancel</button>
 		</div>
 
