--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
 			<li class="nav-item"><a class="nav-link" *ngIf="user && user.role === 'admin' && isEmailVerif" routerLink="/users">Users</a></li>
 			<li class="nav-item"><a class="nav-link" *ngIf="user && user.role === 'specialist' && isValid" routerLink="/my-patients">My Patients</a></li>
 			<li class="nav-item"><a class="nav-link" *ngIf="user && user.role === 'patient'" routerLink="/my-profile">My Profile</a></li>
-			<li class="nav-item"><a class="nav-link" *ngIf="isValid" routerLink="/account">Account</a></li>
+			<li class="nav-item"><a class="nav-link" *ngIf="user && user.role !== 'patient' && isValid" routerLink="/account">Account</a></li>
 
 			<li class="nav-item"><a class="nav-link" *ngIf="user && user.role === 'specialist' && !isValid" routerLink="/specialist-enabling">Enable</a></li>
 			<li class="nav-item"><a class="nav-link" *ngIf="user && !isEmailVerif" routerLink="/account-verification">Verify</a></li>
