Patient profile added 'No rows' message to pdf

--- a/src/app/components/pat-profile/pat-profile.component.html
+++ b/src/app/components/pat-profile/pat-profile.component.html
@@ -1,4 +1,7 @@
-<h2 class="text-center mt-5 mb-3">Appointments</h2>
+<app-account></app-account>
+<hr class="my-2">
+
+<h2 class="text-center mt-5 mb-3">Medical History</h2>
 
 <app-patient-history
 	[exportBtn]="true"
