--- a/src/app/components/user-btn-list/user-btn-list.component.css
+++ b/src/app/components/user-btn-list/user-btn-list.component.css
@@ -1,4 +1,10 @@
-img:hover {
+img {
+	width: 100%;
+	height: auto;
+	display: block !important;
+}
+
+.img-div:hover {
 	filter: brightness(105%);
 	transform: scale(1.25);
 	transition: all .5s ease;
