--- a/src/app/statistics/chart/chart.component.html
+++ b/src/app/statistics/chart/chart.component.html
@@ -1,9 +1,12 @@
 <div class="container d-flex justify-content-center">
-	<div class="mb-1" *ngIf="chartData" style="width: 600px; height: auto;">
+	<div class="mb-1" *ngIf="chartData" style="width: auto; height: auto;">
 		<canvas baseChart
+			[style.width]="width"
+			[style.height]="height"
 			[type]="chartType"
 			[data]="chartData"
-			[options]="chartOptions">
+			[options]="chartOptions"
+			[id]="chartId">
 		</canvas>
 	</div>
 </div>
