--- a/src/app/components/appointments/appt-diagnosis/appt-diagnosis.component.html
+++ b/src/app/components/appointments/appt-diagnosis/appt-diagnosis.component.html
@@ -7,15 +7,13 @@
 			<div class="col-md-6 mb-3">
 				<label for="height">Height (cm)</label>
 				<input type="number" step="0.1" class="form-control" id="height" name="height" formControlName="height" min="20"
-					max="280"
-					[class]="diagnosisForm.controls['height'].errors !== null && diagnosisForm.controls['height'].touched ? 'border-danger border-2' : ''">
+					max="280" appFormError [isValid]="!diagnosisForm.controls['height'].errors">
 			</div>
 
 			<div class="col-md-6 mb-3">
 				<label for="weight">Weight (kg)</label>
 				<input type="number" step="0.1" class="form-control" id="weight" name="weight" formControlName="weight"
-					min="0.5" max="700"
-					[class]="diagnosisForm.controls['weight'].errors !== null && diagnosisForm.controls['weight'].touched ? 'border-danger border-2' : ''">
+					min="0.5" max="700" appFormError [isValid]="!diagnosisForm.controls['weight'].errors">
 			</div>
 		</div>
 
@@ -23,19 +21,17 @@
 			<div class="col-md-6 mb-3">
 				<label for="temperature">Body temperature (°C)</label>
 				<input type="number" step="0.01" class="form-control" id="temperature" name="temperature" min="23" max="45"
-					formControlName="temperature"
-					[class]="diagnosisForm.controls['temperature'].errors !== null && diagnosisForm.controls['temperature'].touched ? 'border-danger border-2' : ''">
+					formControlName="temperature" appFormError [isValid]="!diagnosisForm.controls['temperature'].errors">
 			</div>
 
 			<div class="col-md-6 mb-3">
 				<label for="bloodPressure">Blood pressure</label>
 				<div class="input-group" id="bloodPressure">
 					<input type="number" class="form-control" formControlName="systolic" min="25" max="215" placeholder="Systolic"
-						[class]="diagnosisForm.controls['systolic'].errors !== null && diagnosisForm.controls['systolic'].touched ? 'border-danger border-2' : ''" />
+						appFormError [isValid]="!diagnosisForm.controls['systolic'].errors">
 					<div class="input-group-text">/</div>
 					<input type="number" class="form-control" formControlName="diastolic" min="10" max="130"
-						placeholder="Diastolic"
-						[class]="diagnosisForm.controls['diastolic'].errors !== null && diagnosisForm.controls['diastolic'].touched ? 'border-danger border-2' : ''" />
+						placeholder="Diastolic" appFormError [isValid]="!diagnosisForm.controls['diastolic'].errors">
 					<div class="input-group-append rounded-start-0">
 						<span class="input-group-text">mmHg</span>
 					</div>
@@ -47,20 +43,26 @@
 		<div class="row">
 			<div class="col-md-4">
 				<div class="input-group" formGroupName="additional1">
-					<input type="text" class="input-group-text rounded-end-0 w-70" formControlName="key" placeholder="Key">
-					<input type="number" class="form-control rounded-start-0 w-30" formControlName="value" placeholder="Value">
+					<input type="text" class="input-group-text rounded-end-0 w-70" formControlName="key" placeholder="Key"
+						appFormError [isValid]="!diagnosisForm.controls['additional1.key'].errors">
+					<input type="number" class="form-control rounded-start-0 w-30" formControlName="value" placeholder="Value"
+						appFormError [isValid]="!diagnosisForm.controls['additional1.value'].errors">
 				</div>
 			</div>
 			<div class="col-md-4">
 				<div class="input-group" formGroupName="additional2">
-					<input type="text" class="input-group-text rounded-end-0 w-70" formControlName="key" placeholder="Key">
-					<input type="number" class="form-control rounded-start-0 w-30" formControlName="value" placeholder="Value">
+					<input type="text" class="input-group-text rounded-end-0 w-70" formControlName="key" placeholder="Key"
+						appFormError [isValid]="!diagnosisForm.controls['additional2.key'].errors">
+					<input type="number" class="form-control rounded-start-0 w-30" formControlName="value" placeholder="Value"
+						appFormError [isValid]="!diagnosisForm.controls['additional2.value'].errors">
 				</div>
 			</div>
 			<div class="col-md-4">
 				<div class="input-group" formGroupName="additional3">
-					<input type="text" class="input-group-text rounded-end-0 w-70" formControlName="key" placeholder="Key">
-					<input type="number" class="form-control rounded-start-0 w-30" formControlName="value" placeholder="Value">
+					<input type="text" class="input-group-text rounded-end-0 w-70" formControlName="key" placeholder="Key"
+						appFormError [isValid]="!diagnosisForm.controls['additional3.key'].errors">
+					<input type="number" class="form-control rounded-start-0 w-30" formControlName="value" placeholder="Value"
+						appFormError [isValid]="!diagnosisForm.controls['additional3.value'].errors">
 				</div>
 			</div>
 		</div>
