--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<button class="scroll-top-btn" appScrollToTop><i class="bi bi-arrow-up-short"></i></button>
 <!-- header section starts -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 	<div class="container px-lg-5">
