--- a/src/styles.css
+++ b/src/styles.css
@@ -46,3 +46,12 @@ body {
 	border-style: solid;
 	border-color: transparent transparent #f1f1f1 transparent;
 }
+
+.scroll-top-btn {
+	position: fixed;
+	top: 0;
+	right: 0;
+	margin: 1.5rem;
+	border-radius: 50%;
+	display: none;
+}
